# AI-Small-Business-Assistant

./: .gitignore  README.md
JetCore/: .env.example  .gitignore  README.md  launcher.py
JetCore/DevBay/: devbay-overlay.ts  devbay.ts
JetCore/Pylon/: pylon.ts
JetCore/Summit/: README.md  backend.py  backend.spec  models.py  plaid_client.py  requirements.txt
JetCore/Summit/analysis/: assistant_qa.py  camera.py  data_profiler.py  llm_assistant.py  optimizer.py  vision_embed.py
JetCore/Summit/frontend/: index.html  package-lock.json  package.json  svg_to_ico.mjs  vite.config.js
JetCore/Summit/frontend/src/: App.jsx  accent.js  api.js  index.css  main.jsx  planGating.jsx
JetCore/Summit/frontend/src/pages/: AddWorkspaceModal.jsx  Dashboard.jsx  Login.jsx  PricingModal.jsx  TitleBar.jsx
JetCore/Summit/frontend/src/pages/tabs/: AIOptimize.jsx  Accounts.jsx  Admin.jsx  AskAI.jsx  Assistant.jsx  BusinessProfile.jsx  CameraScan.jsx  EmptyState.jsx  Expenses.jsx  Finances.jsx  Inventory.jsx  Labor.jsx  Overview.jsx  Reviews.jsx  Sales.jsx  Settings.jsx  Tour.jsx  UploadButton.jsx
JetCore/Summit/integrations/: homebase.py  oracle.py  toast.py
JetCore/Summit/static/react/: index.html
JetCore/Summit/static/react/assets/: index-BVUCI8tx.css  index-CxleI6Es.js  index-DI4gXDQc.css  index-Ks1VPuAu.js
JetCore/Summit/templates/: plaid_link.html
JetCore/borderless-agent/: Cargo.toml  README.md  STATUS.md
JetCore/borderless-agent/crates/borderlessd/: Cargo.toml
JetCore/borderless-agent/crates/borderlessd/src/: config.rs  control.rs  logging.rs  main.rs  run.rs
JetCore/borderless-agent/crates/capture/: Cargo.toml
JetCore/borderless-agent/crates/capture/src/: lib.rs
JetCore/borderless-agent/crates/clipboard/: Cargo.toml
JetCore/borderless-agent/crates/clipboard/src/: lib.rs
JetCore/borderless-agent/crates/core/: Cargo.toml
JetCore/borderless-agent/crates/core/src/: cursor.rs  engine.rs  lib.rs  seam.rs
JetCore/borderless-agent/crates/discovery/: Cargo.toml
JetCore/borderless-agent/crates/discovery/src/: lib.rs
JetCore/borderless-agent/crates/inject/: Cargo.toml
JetCore/borderless-agent/crates/inject/src/: lib.rs
JetCore/borderless-agent/crates/layout/: Cargo.toml
JetCore/borderless-agent/crates/layout/src/: lib.rs
JetCore/borderless-agent/crates/pairing/: Cargo.toml
JetCore/borderless-agent/crates/pairing/src/: lib.rs
JetCore/borderless-agent/crates/protocol/: Cargo.toml
JetCore/borderless-agent/crates/protocol/src/: lib.rs
JetCore/borderless-agent/crates/topology/: Cargo.toml
JetCore/borderless-agent/crates/topology/src/: lib.rs
JetCore/borderless-agent/crates/transport/: Cargo.toml
JetCore/borderless-agent/crates/transport/src/: lib.rs
JetCore/frontend/: .gitignore  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
JetCore/frontend/src/main/: accounts.ts  auth.ts  blobstore.ts  crypto.ts  index.ts  persistence.ts  supabase.ts  tokens.ts  update-token.ts  updater.ts  vault.ts
JetCore/frontend/src/main/apps/: README.md
JetCore/frontend/src/main/apps/borderless/: borderless.ts
JetCore/frontend/src/main/apps/summit/: jetcore.ts  opssync.ts
JetCore/frontend/src/preload/: index.ts  operations.ts
JetCore/frontend/src/renderer/: index.html
JetCore/frontend/src/renderer/src/: App.tsx  index.css  main.tsx  store.ts
JetCore/frontend/src/renderer/src/apps/: AppBrand.tsx  AppNav.tsx  AppPage.tsx  AppRail.tsx  AppSwitcher.tsx  NativeAppHost.tsx  registry.tsx
JetCore/frontend/src/renderer/src/apps/devbay/: DevBayApp.tsx  DevBayOverlay.tsx
JetCore/frontend/src/renderer/src/apps/hangar/: HangarApp.tsx
JetCore/frontend/src/renderer/src/apps/marketing/: Homepage.tsx  IntentForm.tsx  Pricing.tsx
JetCore/frontend/src/renderer/src/apps/pylon/: PylonApp.tsx
JetCore/frontend/src/renderer/src/components/: AccountChip.tsx  AddDeckModal.tsx  LoginShell.tsx  OperationsView.tsx  Sidebar.tsx  Titlebar.tsx  UpdateOverlay.tsx
JetCore/frontend/src/renderer/src/components/Settings/: Accounts.tsx
JetCore/frontend/src/renderer/src/components/palette/: usePaletteItems.ts
JetCore/frontend/src/renderer/src/design/: JetCoreApp.tsx  Walkthrough.tsx  apps.ts  charts.tsx  contract.ts  icons.tsx  motion.tsx  shell.tsx  tokens.css  ui.tsx
JetCore/frontend/src/renderer/src/design/apps/borderless/: BorderlessScreen.tsx  index.ts
JetCore/frontend/src/renderer/src/design/apps/devbay/: DevBayQuickPanel.tsx  DevBayRepoBrowser.tsx  DevBayScreen.tsx  highlight.ts  index.ts
JetCore/frontend/src/renderer/src/design/apps/entry/: EntryFlow.tsx  index.ts
JetCore/frontend/src/renderer/src/design/apps/forge/: ForgeScreen.tsx  forge.css
JetCore/frontend/src/renderer/src/design/apps/hangar/: HangarScreen.tsx  index.ts
JetCore/frontend/src/renderer/src/design/apps/pylon/: Announcements.tsx  Assignments.tsx  CourseScreen.tsx  Coursework.tsx  Dashboard.tsx  Grades.tsx  PylonScreen.tsx  Quizzes.tsx  canvas.ts  gradeMath.ts  index.ts  shared.tsx
JetCore/frontend/src/renderer/src/design/apps/settings/: SettingsScreen.tsx
JetCore/frontend/src/renderer/src/design/redesign/: Hangar.tsx  anim.tsx  system.ts
JetCore/frontend/src/renderer/src/native/canvas/: CanvasDeck.tsx
JetCore/frontend/src/shared/: ipc.ts  types.ts  window.d.ts
TradingSimulator/backend/: app.py  arbitrage_engine.py  llm_trader.py  trading_model.py
TradingSimulator/frontend/: package-lock.json
TradingSimulator/frontend/src/: App.jsx
TradingSimulator/frontend/src/components/: AIActivityTicker.jsx  AIChatPanel.jsx  AIInsights.jsx  AILogPanel.jsx  AIScoreBadge.jsx  AIStatusChip.jsx  AIThesisPanel.jsx  AIToasts.jsx  AITopPicks.jsx  AIVerdictPill.jsx  AnalysisPanel.jsx  ArbitragePanel.jsx  Chart.jsx  ModelCard.jsx  Positions.jsx  TitleBar.jsx  Watchlist.jsx
(+19 files in other folders)
