[package]
name = "discovery"
version = "0.1.0"
edition = "2021"
description = "LAN peer discovery (UDP beacons) for JetCore Borderless."

[dependencies]
protocol.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
socket2 = "0.6"
