[package]
name = "topology"
version = "0.1.0"
edition = "2021"
description = "Local monitor topology enumeration (Win32) for JetCore Borderless."

[dependencies]
protocol.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]
